--- a/index.html
+++ b/index.html
@@ -330,6 +330,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/digital-marketing-strategy"><img src="images/laptop-computer-on-glass-top-table-350x183.jpg" 
+                                alt="Laptop computer on glass-top table"></a>     
+                            <div class="blog-card-text">           
+                                <h3>Free Webinar: Digital Marketing Strategy</h3>
+                                <p>23 January 2024</p>
+                                <p>Want to learn how to develop an effective digital marketing strategy for your business? Join this free webinar hosted by CNT Associates.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/digital-marketing-strategy">Register Now</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/common-website-mistakes">
@@ -358,20 +372,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/improve-website-seo"><img src="images/google-search-console-350x183.jpg" 
-                                alt="Google Search Console"></a>     
-                            <div class="blog-card-text">           
-                                <h3>How to Improve Your Website's SEO</h3>
-                                <p>26 December 2023</p>
-                                <p>Want to know how to gain more traffic through search? Read this article for 11 ways to improve your website's SEO (search engine optimisation).</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>   
-                                </div>
-                            </div>
-                        </div> 
                     </div>
                 </div>
             </div>
