--- a/blog-2.html
+++ b/blog-2.html
@@ -84,7 +84,7 @@
         <div class="main section">
             <div class="container-1140">
                 <h2>How Do I Upgrade to Google Analytics 4?</h2>
-                <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
+                <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The previous version, Universal Analytics, stopped processing new data on 1st July 2023, so you need to upgrade to GA4 if you have not yet done so. Not sure which version of Google …</p>
                 <br>
                 <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
                 <div class="padding-top">
