--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -125,15 +125,15 @@
 
                 <p>The “slug” is the part of a web page's URL that comes after the domain name. So in the example below, the slug would be <em>common-website-mistakes</em>:</p>
 
-                <ul><li>Example 1: <a href="https://sybiltec.com/common-website-mistakes">https://sybiltec.com/common-website-mistakes</a></li></ul>
+                <ul><li>Example 1: <a href="https://sybiltec.com/">https://sybiltec.com/common-website-mistakes</a></li></ul>
 
                 <p>By default, the slug is usually generated based on the title of the page. So if your page has a very long title, you could end up with a URL like this:</p>
 
-                <ul><li>Example 2: <a href="https://sybiltec.com/the-20-most-common-website-mistakes-and-how-to-avoid-them">https://sybiltec.com/the-20-most-common-website-mistakes-and-how-to-avoid-them</a></li></ul>
+                <ul><li>Example 2: <a href="https://sybiltec.com/">https://sybiltec.com/the-20-most-common-website-mistakes-and-how-to-avoid-them</a></li></ul>
 
                 <p>Or sometimes, the slug is generated from the post ID of the page, like this:</p>
 
-                <ul><li>Example 3: <a href="https://sybiltec.com/?p=956">https://sybiltec.com/?p=956</a></li></ul>
+                <ul><li>Example 3: <a href="https://sybiltec.com/">https://sybiltec.com/?p=956</a></li></ul>
 
                 <p>Examples 2 and 3 are not SEO-friendly. Example 2 is too long, and Example 3 isn't helpful to search engines as the slug doesn't describe what the page is about. You would want to create something like Example 1.</p>
 
