--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,10 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
+        <meta name="geo.region" content="GB" />
+        <meta name="geo.placename" content="London" />
+        <meta name="geo.position" content="51.495673;0.141465" />
+        <meta name="ICBM" content="51.495673, 0.141465" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
