Add areas covered

--- a/index.html
+++ b/index.html
@@ -490,7 +490,8 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
+                <p class="center">Areas covered:<br>Abbey Wood, Erith, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Deptford, Greenwich, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
