--- a/digital-marketing-strategy.html
+++ b/digital-marketing-strategy.html
@@ -200,6 +200,7 @@
                         </p>                       
                     </div>
                 </div>
+                <p class="center">Areas covered:<br>Abbey Wood, Erith, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Deptford, Greenwich, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
                 <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
