--- a/clients.html
+++ b/clients.html
@@ -186,7 +186,7 @@
                         </p>                       
                     </div>
                 </div>
-                <p class="center">Areas covered:<br>Abbey Wood, Erith, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Deptford, Greenwich, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
+                <p class="center">Areas covered:<br>Abbey Wood, Crayford, Erith, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Deptford, Greenwich, Lewisham, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
                 <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
