Updates to index.html and blog

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h1>Affordable web design for small businesses</h1>
+                        <h1>Web Design for the Serious Business Owner</h1>
                         <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting SMEs in South East London</h2>
                         <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
@@ -340,7 +340,7 @@
                                 alt="Laptop computer on glass-top table"></a>     
                             <div class="blog-card-text">           
                                 <h3>Free Webinar: Digital Marketing Strategy</h3>
-                                <p>23 January 2024</p>
+                                <p>24 January 2024</p>
                                 <p>Want to learn how to develop an effective digital marketing strategy for your business? Join this free webinar hosted by CNT Associates.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/digital-marketing-strategy">Register Now</a>   
