--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TDTVSWH3');</script>
+        <!-- End Google Tag Manager -->
         <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
@@ -39,6 +46,10 @@
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png"> 
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TDTVSWH3"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -85,7 +96,7 @@
                     <div class="col-8">
                         <h1>Web Design for the Serious Business Owner</h1>
                         <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting SMEs in South East London</h2>
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                     <div class="col-4">
                         <img src="images/Sybil-Mayard.jpg" alt="Headshot of Sybil Mayard">
