Add blog on 10 best WP plugins

--- a/blog.html
+++ b/blog.html
@@ -87,10 +87,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Free Webinar: Developing a Digital Marketing Strategy</h2>
+                <h2>10 Best Free WordPress Plugins</h2>
+                    <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>
+                <div class="padding-top">
+                    <h2>Free Webinar: Developing a Digital Marketing Strategy</h2>
                     <p>Do you want to learn about digital marketing methods and develop an effective strategy? Join our FREE webinar on Wednesday 31st January 2024 at 11am to gain awareness of the different marketing methods available to you and how you can utilise them effectively. …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/digital-marketing-strategy">Register Now</a>
+                </div>
                 <div class="padding-top">
                     <h2>10 Common Website Mistakes and How to Avoid Them</h2>
                     <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
