--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">          
+                        <div class="blog-card">
+                            <a href="https://sybiltec.com/best-free-wordpress-plugins"><img src="images/wordpress-add-new-plugins-page.jpg" 
+                                alt="WordPress add new plugins page"></a>  
+                            <div class="blog-card-text">               
+                                <h3>10 Best Free WordPress Plugins</h3>
+                                <p>30 January 2024</p>
+                                <p>To extend the functionality of your WordPress site, you'll need to install a few plugins. Read this article to learn about the 10 most useful free plugins. </p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/digital-marketing-strategy"><img src="images/laptop-computer-on-glass-top-table-350x183.jpg" 
@@ -370,20 +384,6 @@
                                 <p>Website mistakes are easy to make, but can be avoided. Read on to learn how you can prevent the most common pitfalls of building a website.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Read More</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">          
-                        <div class="blog-card">
-                            <a href="https://sybiltec.com/how-to-choose-web-designer"><img src="images/woman-sitting-in-front-of-turned-on-computer-monitor-350x183.jpg" 
-                                alt="Woman sitting in front of turned on computer monitor"></a>  
-                            <div class="blog-card-text">               
-                                <h3>How to Choose a Web Designer</h3>
-                                <p>09 January 2024</p>
-                                <p>Looking for a web designer can be a difficult task with so much choice nowadays. Keep reading to find out how to choose the best person for the job. </p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>   
                                 </div>
                             </div>
                         </div>
