--- a/projects.html
+++ b/projects.html
@@ -90,11 +90,11 @@
                 <h2 class="padding-top" id="vidcareer">VidCareer</h2>
                 <hr class="left-align">
 
-                <p class="padding-top">VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the <a href="https://www.kent.ac.uk/" target="_blank" rel="noopener noreferrer">University of Kent</a>. VidCareer is a recruitment platform that helps small businesses connect with candidates via online career events - like careers fairs - but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
+                <p class="padding-top">VidCareer has been my biggest achievement so far. It's a start-up idea that began during my time at the University of Kent. VidCareer is a recruitment platform that helps small businesses connect with candidates via online career events - like careers fairs - but delivered virtually. There are clear benefits for both parties: less time and money spent on networking events, and it's kinder to the environment too.</p>
 
                 <p>For the last several months, I have been developing a fully-functional prototype platform that has helped keep my coding skills up-to-date.</p>
                     
-                <p>I've designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the <a href="https://developer.goto.com/GoToMeetingV1/" target="_blank" rel="noopener noreferrer">GoToMeeting REST API</a> are some of the features implemented.</p>
+                <p>I've designed and created the entire site from scratch, making use of a range of technologies, languages and APIs. PHP, HTML, CSS, SQL, JavaScript, Bootstrap and the GoToMeeting REST API are some of the features implemented.</p>
 
                 <h3>Competition Winner</h3>
                 <p>In April 2018, I was delighted to find out that I had been chosen as the winner of the Big Ideas Competition at Kent with my business idea, "Codable", an online platform that helps tech companies hire the right developers. The winning prize was an all-expenses-paid trip to Virginia in the USA to pitch the idea at the finals.</p>
@@ -108,7 +108,6 @@
                 <ul>
                     <li><a href="https://www.kent.ac.uk/news/society/17829/big-ideas-competition-winner-goes-to-global-competition" target="_blank" rel="noopener noreferrer">Big Ideas Competition Winner goes to Global Competition</a></li>
                     <li><a href="https://video.vt.edu/media/Global+Entrepreneur+Challenge+2018/1_16k9vaj1" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018 - Virginia Tech - Video</a></li>
-                    <li><a href="https://sybiltec.com/uploads/Global_Entrepreneur_Challenge_2018.pdf" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018</a></li>
                     <li><a href="https://sybiltec.com/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
                 </ul>
 
@@ -116,8 +115,7 @@
 
                 <h2 class="padding-top" id="android">An Android App for an Educational Poker Platform</h2>
                 <hr class="left-align">
-                <p class="padding-top">For my final MSc project at the <a href="https://www.kent.ac.uk" 
-                    target="_blank" rel="noopener noreferrer">University of Kent</a>, 
+                <p class="padding-top">For my final MSc project at the University of Kent, 
                     I created an Android 
                     app that teaches you how to play Texas Hold'em Poker. The app works by 
                     using an algorithm that calculates the player's hand score, or probability 
@@ -127,7 +125,7 @@
                     <p>Of course, the app is to be used for learning purposes only and not during 
                     a real game.</p>
                     
-                    <p>The app was entirely coded from scratch in Java, using <a href="https://developer.android.com/studio" target="_blank" rel="noopener noreferrer">Android Studio</a>, and 
+                    <p>The app was entirely coded from scratch in Java, using Android Studio, and 
                     was completed in September 2018. I also wrote an accompanying technical 
                     report (dissertation) of over 11,000 words. I am pleased to announce that 
                     the finished project and dissertation was awarded a Distinction grade.</p>
@@ -138,8 +136,7 @@
                 <h2 class="padding-top" id="tagnav">TagNav</h2>
                 <hr class="left-align">
                 <p class="padding-top">TagNav is an app concept that was developed by two students (Asha Burathoki, 
-                    Olcay Kilincci) and I, during our time at the <a href="https://www.kent.ac.uk/" 
-                    target="_blank" rel="noopener noreferrer">University of Kent</a>. It is very 
+                    Olcay Kilincci) and I, during our time at the University of Kent. It is very 
                     common for students to experience feelings of depression and isolation, 
                     especially when living on campus for the first time. To help ease the 
                     transition, we designed TagNav: an app which helps students connect with 
