Fix most redirects

--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -105,7 +105,7 @@
 
                 <h2>Free and Premium Plans Compared</h2>
                 <h3>Slack</h3>
-                <p><a href="https://slack.com/" target="_blank" rel="noopener noreferrer">Slack</a> is a collaborative workspace hub. Within Slack, you can message co-workers, send files, screenshots and videos, make notes to yourself and more. Slack offers integration with many other applications, including <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">Google Drive</a>, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and <a href="https://trello.com" target="_blank" rel="noopener noreferrer">Trello</a>.</p>
+                <p><a href="https://slack.com/intl/en-gb/" target="_blank" rel="noopener noreferrer">Slack</a> is a collaborative workspace hub. Within Slack, you can message co-workers, send files, screenshots and videos, make notes to yourself and more. Slack offers integration with many other applications, including <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">Google Drive</a>, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and <a href="https://trello.com" target="_blank" rel="noopener noreferrer">Trello</a>.</p>
 
                 <p>Reach different audiences via channels; for instance, you could create a separate channel for each project or department in your organisation, to ensure that your announcements go out to the right groups of people.</p>
 
@@ -203,11 +203,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
