--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -129,9 +129,9 @@
 
                 <p>Need to share large files? No more sending attachments via email! Create a document in <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">Google Drive</a> and send the shareable link to colleagues who require access.</p>
 
-                <p>There are many options available for video meetings. One of the most popular is <a href="https://zoom.us/" target="_blank" rel="noopener noreferrer">Zoom</a>, which offers free video calling for 40 minutes for up to 100 participants. Other well-known alternatives include <a href="https://www.microsoft.com/en-gb/microsoft-teams/free" target="_blank" rel="noopener noreferrer">Microsoft Teams</a> and <a href="https://meet.google.com/" target="_blank" rel="noopener noreferrer">Google Meet</a>. You may also want to try <a href="https://meet.jit.si/" target="_blank" rel="noopener noreferrer">Jitsi Meet</a>, which currently imposes no limitations on meeting length and no account is needed. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
+                <p>There are many options available for video meetings. One of the most popular is <a href="https://zoom.us/" target="_blank" rel="noopener noreferrer">Zoom</a>, which offers free video calling for 40 minutes for up to 100 participants. Other well-known alternatives include <a href="https://www.microsoft.com/en-gb/microsoft-teams/free" target="_blank" rel="noopener noreferrer">Microsoft Teams</a> and <a href="https://apps.google.com/meet/" target="_blank" rel="noopener noreferrer">Google Meet</a>. You may also want to try <a href="https://meet.jit.si/" target="_blank" rel="noopener noreferrer">Jitsi Meet</a>, which currently imposes no limitations on meeting length and no account is needed. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
 
-                <p>Another great piece of software is <a href="https://slack.com/" target="_blank" rel="noopener noreferrer">Slack</a>. It's an alternative to email, featuring instant messaging, file sharing, video calling and integration with other apps (Google Drive, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and more). Slack is available both as an online and desktop tool.</p>
+                <p>Another great piece of software is <a href="https://slack.com/intl/en-gb/" target="_blank" rel="noopener noreferrer">Slack</a>. It's an alternative to email, featuring instant messaging, file sharing, video calling and integration with other apps (Google Drive, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and more). Slack is available both as an online and desktop tool.</p>
 
                 <h2>Keep to a Defined Routine</h2>
                 <p>When working from home, it's easy for working time to impinge on personal time. Create a routine and stick to it – whether that is 9am-5pm or 9pm-5am – whichever works best for you. Keep to these hours and don't be tempted to send just "one more" email before leaving work – it's easy to lose track of time. Remember to take care of your health, by scheduling in regular breaks in between sessions. I recommend 1 hour for lunch and one 15-minute break either side of the lunch hour.</p>
@@ -194,11 +194,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
