--- a/bexley-talking-business.html
+++ b/bexley-talking-business.html
@@ -134,7 +134,7 @@
                 <p>To start your application and register your interest, please click the button below.</p>
 
                 <div class="padding-top padding-bottom">
-                    <a class="btn-primary" href="https://bit.ly/45Um9W6" target="_blank" rel="noreferrer noopener">Register Now</a>
+                    <a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noreferrer noopener">Register Now</a>
                 </div>
                 <div class="row">
                     <div class="col-3">
@@ -197,11 +197,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
