--- a/website-design.html
+++ b/website-design.html
@@ -177,7 +177,7 @@
                                 <li>Homepage and collection page design in GemPages</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://encalife.com/" 
+                                <a class ="btn-secondary" href="https://www.encalife.com/" 
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
@@ -333,11 +333,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
