--- a/website-development.html
+++ b/website-development.html
@@ -140,7 +140,7 @@
                                 <li>Website design improvements</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://jenup.co.uk/" 
+                                <a class ="btn-secondary" href="https://www.jenup.co.uk/" 
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                             <li>Website review</li>
                         </ul>
                         <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://eventsmeetsworld.co.uk" 
+                            <a class ="btn-secondary" href="https://www.eventsmeetsworld.co.uk/" 
                             target="_blank" rel="noopener noreferrer">View Client</a>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                             <li>Website review</li>
                         </ul>
                         <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://cntassociates.com"
+                            <a class ="btn-secondary" href="https://www.cntassociates.com/"
                             target="_blank" rel="noopener noreferrer">View Client</a>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                             <li>Google Search Console submission</li>
                         </ul>              
                         <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://www.bluehorizonlnw.com"
+                            <a class ="btn-secondary" href="https://bluehorizonlnw.com/"
                             target="_blank" rel="noopener noreferrer">View Client</a>
                         </div>
                     </div>
@@ -452,11 +452,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
