--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <hr>
                 <div class="row">
                     <div class="col-2">
-                        <a href="http://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
+                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
                         <img src="images/logos/shopify-partners.png" alt="Shopify Partners logo">
@@ -492,11 +492,11 @@
                         <h4>Get in Touch</h4>
                         <p>
                             <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
-                            <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                            <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i></a>
-			                <a href="https://youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
+			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </p>                       
                     </div>
