--- a/guide-to-updating-your-wordpress-website.html
+++ b/guide-to-updating-your-wordpress-website.html
@@ -193,6 +193,7 @@
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
