--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Events | London Website Design & Development | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web design & development services to small businesses. See below to register for my events, webinars and workshops.">
-        <meta name="robots" content="all">
+        <meta name="robots" content="noindex">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Events | London Website Design & Development | Sybiltec" />
@@ -146,6 +146,7 @@
                         <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
